--- a/spelling.cabal
+++ b/spelling.cabal
@@ -17,14 +17,14 @@ library
   hs-source-dirs:      src
   exposed-modules:     Spl, Dictionary,
                        Spell.ByteString, Spell.Text, Spell.LazyText
-                       Test1, Test2, Test3, Test4, Test5
+                       Test1, Test2, Test3, Test4, Test4b, Test5, Test6
   build-depends:       base >= 4.7 && < 5, containers, regex-tdfa, bytestring, data-ordlist, unordered-containers, text
   default-language:    Haskell2010
 
 executable spelling-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -rtsopts
   build-depends:       base
                      , spelling, bytestring, text
   default-language:    Haskell2010
