--- a/spelling.cabal
+++ b/spelling.cabal
@@ -17,7 +17,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Spl, Dictionary,
                        Spell.ByteString, Spell.Text, Spell.LazyText
-                       Test1, Test2, Test3, Test4, Test4b, Test4c, Test4d,
+                       Test1, Test2, Test3,
+                       Test4, Test4b, Test4c, Test4d, Test4e
                        Test5, Test6
   build-depends:       base >= 4.7 && < 5, containers, regex-tdfa, bytestring, data-ordlist, unordered-containers, text, regex-tdfa-text
   default-language:    Haskell2010
